--- a/life.html
+++ b/life.html
@@ -85,7 +85,9 @@
             { title: "멸치볶음", link: "/Life/myeolchi.html" },
             { title: "카레", link: "/Life/care.html" },
             { title: "순두부국", link: "/Life/soondooboo.html" },
-            { title: "시금치나물", link: "/Life/sigmchi.html" }
+            { title: "시금치나물", link: "/Life/sigmchi.html" },
+            { title: "숙주나물", link: "/Life/sukjoo.html" },
+            { title: "미역국", link: "/Life/miyuk.html" }
         ];
         
         const postsPerPage = 10;
