--- a/tech.html
+++ b/tech.html
@@ -80,7 +80,8 @@
     </div>
     <script>
         const posts = [
-            { title: "허깅페이스를 활용한 이미지 생성", link: "/Tech/imagegernertion.html" }
+            { title: "허깅페이스를 활용한 이미지 생성", link: "/Tech/imagegernertion.html" },
+            { title: "PMP등 커리어 방향", link: "/Tech/career.html" }
         ];
         
         const postsPerPage = 10;
