--- a/book.html
+++ b/book.html
@@ -67,6 +67,7 @@
 <body>
     <header>
         <h1>Bool Category</h1>
+        <a href="/index.html"><i class="fas fa-home"></i>Back to Home</a>
     </header>
     <div class="container">
         <h2>Book List</h2>
