--- a/education.html
+++ b/education.html
@@ -67,6 +67,7 @@
 <body>
     <header>
         <h1>Education Category</h1>
+        <a href="/index.html"><i class="fas fa-home"></i>Back to Home</a>
     </header>
     <div class="container">
         <h2>Education List</h2>
