--- a/life.html
+++ b/life.html
@@ -70,8 +70,9 @@
     </header>
     <div class="container">
         <h2>Life List</h2>
+        <a href="/index.html"><i class="fas fa-home"></i>Back to Home</a>
         <ul id="postList">
-            <!-- Book items will be injected here dynamically -->
+            <!-- Life items will be injected here dynamically -->
         </ul>
         <div class="pagination">
             <button id="prevBtn" disabled>Previous</button>
