--- a/tech.html
+++ b/tech.html
@@ -66,13 +66,13 @@
 </head>
 <body>
     <header>
-        <a href="/index.html"><i class="fas fa-home"></i>Back to Home</a>
         <h1>Tech Category</h1>
+        <a href="/index.html"><i class="fas fa-home"></i>Back to Home</a>
     </header>
     <div class="container">
-        <h2>Book List</h2>
+        <h2>Tech List</h2>
         <ul id="postList">
-            <!-- Book items will be injected here dynamically -->
+            <!-- Tech items will be injected here dynamically -->
         </ul>
         <div class="pagination">
             <button id="prevBtn" disabled>Previous</button>
