--- a/mindnotes.html
+++ b/mindnotes.html
@@ -67,6 +67,7 @@
 <body>
     <header>
         <h1>Mind Notes Category</h1>
+        <a href="/index.html"><i class="fas fa-home"></i>Back to Home</a>
     </header>
     <div class="container">
         <h2>MindNotes List</h2>
