--- a/tech.html
+++ b/tech.html
@@ -82,7 +82,9 @@
     <script>
         const posts = [
             { title: "허깅페이스를 활용한 이미지 생성", link: "/Tech/imagegernertion.html" },
-            { title: "PMP등 커리어 방향", link: "/Tech/career.html" }
+            { title: "PMP등 커리어 방향", link: "/Tech/career.html" },
+            { title: "금융 산업에서의 AI를 활용한 고객 행태 분석 및 마케팅 방법론", link: "/Tech/AIinFinance.html" },
+            { title: "예측 모델링 - 금융 고객 행동 예측의 시작", link: "/Tech/prediction.html" }
         ];
 
         
