--- a/book.html
+++ b/book.html
@@ -88,7 +88,8 @@
            { title: "일의 격 - 신수정", link: "/Book/work.html" },
            { title: "건너가는 자 - 최진석", link: "Book/choijinsuk.html" },
            { title: "창조적 행위: 존재의 방식 - 릭루빈", link: "/Book/creator.html" },
-           { title: "도파민네이션 - 에나 램키", link: "/Book/dopaminenation.html" }
+           { title: "도파민네이션 - 에나 램키", link: "/Book/dopaminenation.html" },
+           { title: "내가 틀릴 수도 있습니다.  - 비욘 나티코 린데블라드", link: "/Book/Icanbewrong.html" }
         ];
 
         
