--- a/book.html
+++ b/book.html
@@ -81,15 +81,15 @@
     </div>
     <script>
         const posts = [
-           { title: "퓨처셀프_벤자민하디", link: "/Book/futureself.html" },
-           { title: "수학의 진짜 재미 이창후", link: "/Book/realfunmath.html" },
-           { title: "데이터는 예측하지 않는다. 김송규", link: "/Book/datanoprediction.html" },
+           { title: "퓨처셀프 - 벤자민하디", link: "/Book/futureself.html" },
+           { title: "수학의 진짜 재미 - 이창후", link: "/Book/realfunmath.html" },
+           { title: "데이터는 예측하지 않는다. - 김송규", link: "/Book/datanoprediction.html" },
            { title: "유혹하는 글쓰기 - 스티븐 킹", link: "/Book/writing.html" },
            { title: "일의 격 - 신수정", link: "/Book/work.html" },
            { title: "건너가는 자 - 최진석", link: "Book/choijinsuk.html" },
            { title: "창조적 행위: 존재의 방식 - 릭루빈", link: "/Book/creator.html" },
            { title: "도파민네이션 - 에나 램키", link: "/Book/dopaminenation.html" },
-           { title: "내가 틀릴 수도 있습니다.  - 비욘 나티코 린데블라드", link: "/Book/Icanbewrong.html" }
+           { title: "내가 틀릴 수도 있습니다. - 비욘 나티코 린데블라드", link: "/Book/Icanbewrong.html" }
         ];
 
         
