--- a/index.html
+++ b/index.html
@@ -5,18 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Interests Blog</title>
     <style>
+        /* Base styles */
+        :root {
+            --primary-color: #4CAF50;
+            --text-color: #333;
+            --bg-color: #f9f9f9;
+            --card-bg: #e0e0e0;
+            --shadow-color: rgba(0, 0, 0, 0.1);
+            --text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background-color: var(--bg-color);
             text-align: center;
         }
+
         header {
-            background: #4CAF50;
+            background: var(--primary-color);
             color: white;
             padding: 1rem 0;
         }
+
         .container {
             display: flex;
             flex-wrap: wrap;
@@ -26,15 +38,19 @@
             max-width: 1200px;
             margin: 0 auto;
         }
+
         .card {
             width: calc(100% - 20px);
             height: 150px;
             position: relative;
             border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            background-color: #e0e0e0; /* 배경색 추가 */
+            box-shadow: 0 4px 6px var(--shadow-color);
+            background-color: var(--card-bg);
+            transition: transform 0.3s ease;
+            will-change: transform;
         }
+
         .card a {
             display: flex;
             width: 100%;
@@ -45,37 +61,48 @@
             font-weight: bold;
             align-items: center;
             justify-content: center;
-            background-size: contain; /* cover에서 contain으로 변경 */
+            background-size: contain;
             background-position: center;
-            background-repeat: no-repeat; /* 반복 방지 */
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-        }
-        .card:hover {
-            transform: scale(1.05);
-            transition: 0.3s;
+            background-repeat: no-repeat;
+            text-shadow: var(--text-shadow);
+            opacity: 0;
+            animation: fadeIn 0.5s ease forwards;
         }
 
-        /* 모바일 환경 (600px 이상) */
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        /* Responsive design */
         @media (min-width: 600px) {
             .card {
                 width: calc(50% - 20px);
             }
         }
 
-        /* 태블릿 환경 (900px 이상) */
         @media (min-width: 900px) {
             .card {
                 width: calc(33.33% - 20px);
             }
         }
 
-        /* 데스크톱 환경 (1200px 이상) */
         @media (min-width: 1200px) {
             .card {
                 width: calc(25% - 20px);
             }
         }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
     </style>
+    <!-- Preload critical images -->
+    <link rel="preload" as="image" href="images/book.jpg">
+    <link rel="preload" as="image" href="images/education.jpg">
+    <link rel="preload" as="image" href="images/life.jpg">
+    <link rel="preload" as="image" href="images/tech.jpg">
+    <link rel="preload" as="image" href="images/mindnotes.jpg">
 </head>
 <body>
     <header>
@@ -84,20 +111,40 @@
     </header>
     <div class="container">
         <div class="card">
-            <a href="book.html" style="background-image: url('images/book.jpg');">Book</a>
+            <a href="book.html" style="background-image: url('images/book.jpg');" loading="lazy">Book</a>
         </div>
         <div class="card">
-            <a href="education.html" style="background-image: url('images/education.jpg');">Education</a>
+            <a href="education.html" style="background-image: url('images/education.jpg');" loading="lazy">Education</a>
         </div>
         <div class="card">
-            <a href="life.html" style="background-image: url('images/life.jpg');">Life</a>
+            <a href="life.html" style="background-image: url('images/life.jpg');" loading="lazy">Life</a>
         </div>
         <div class="card">
-            <a href="tech.html" style="background-image: url('images/tech.jpg');">Tech</a>
+            <a href="tech.html" style="background-image: url('images/tech.jpg');" loading="lazy">Tech</a>
         </div>
         <div class="card">
-            <a href="mindnotes.html" style="background-image: url('images/mindnotes.jpg');">Mind Notes</a>
+            <a href="mindnotes.html" style="background-image: url('images/mindnotes.jpg');" loading="lazy">Mind Notes</a>
         </div>
     </div>
+    <script>
+        // Optimize image loading
+        document.addEventListener('DOMContentLoaded', () => {
+            const cards = document.querySelectorAll('.card a');
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        const img = entry.target;
+                        img.style.backgroundImage = img.style.backgroundImage;
+                        observer.unobserve(img);
+                    }
+                });
+            }, {
+                rootMargin: '50px 0px',
+                threshold: 0.1
+            });
+
+            cards.forEach(card => observer.observe(card));
+        });
+    </script>
 </body>
 </html>
