--- a/index.html
+++ b/index.html
@@ -4,65 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Interests Blog</title>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         /* Base styles */
         :root {
-            --primary-color: #4CAF50;
-            --text-color: #333;
-            --bg-color: #f9f9f9;
-            --card-bg: #e0e0e0;
-            --shadow-color: rgba(0, 0, 0, 0.1);
-            --text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-            --card-width: 280px;
-            --card-height: 200px;
+            --bg-color: #1e1e1e;
+            --card-bg: #252526;
+            --text-color: #ffffff;
+            --accent-color: #007acc;
+            --card-width: 300px;
+            --card-height: 220px;
             --card-aspect-ratio: 16/9;
         }
 
-        body {
-            font-family: Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Space Grotesk', sans-serif;
             background-color: var(--bg-color);
-            text-align: center;
+            color: var(--text-color);
+            line-height: 1.6;
+            min-height: 100vh;
+            position: relative;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: 
+                radial-gradient(circle at 20% 20%, rgba(0, 122, 204, 0.05) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(0, 122, 204, 0.05) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 0;
         }
 
         header {
-            background: var(--primary-color);
-            color: white;
-            padding: 1rem 0;
+            padding: 4rem 2rem;
+            text-align: center;
+            position: relative;
+            z-index: 1;
+            background: linear-gradient(to bottom, rgba(37, 37, 38, 0.8), transparent);
         }
 
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 30px;
-            padding: 30px;
-            max-width: 1200px;
+        header h1 {
+            font-size: 3.5rem;
+            font-weight: 700;
+            margin-bottom: 1rem;
+            background: linear-gradient(45deg, var(--accent-color), #4ec9b0);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            letter-spacing: -1px;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            color: rgba(255, 255, 255, 0.7);
+            max-width: 600px;
             margin: 0 auto;
         }
 
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(var(--card-width), 1fr));
+            gap: 2rem;
+            padding: 2rem;
+            max-width: 1400px;
+            margin: 0 auto;
+            position: relative;
+            z-index: 1;
+        }
+
         .card {
-            width: var(--card-width);
-            height: var(--card-height);
             position: relative;
             border-radius: 12px;
             overflow: hidden;
-            box-shadow: 0 4px 6px var(--shadow-color);
-            background-color: var(--card-bg);
+            background: var(--card-bg);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-            will-change: transform;
+            aspect-ratio: var(--card-aspect-ratio);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .card::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0,0.7));
+            inset: 0;
+            background: linear-gradient(
+                to bottom,
+                transparent 0%,
+                rgba(0, 0, 0, 0.8) 100%
+            );
             z-index: 1;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .card:hover::before {
+            opacity: 1;
         }
 
         .card a {
@@ -70,68 +115,92 @@
             width: 100%;
             height: 100%;
             text-decoration: none;
-            color: white;
-            font-size: 1.5em;
-            font-weight: bold;
-            align-items: center;
-            justify-content: center;
+            color: var(--text-color);
+            font-size: 1.8rem;
+            font-weight: 600;
+            align-items: flex-end;
+            justify-content: flex-start;
+            padding: 2rem;
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
-            text-shadow: var(--text-shadow);
-            opacity: 0;
-            animation: fadeIn 0.5s ease forwards;
             position: relative;
             z-index: 2;
-            padding: 20px;
-            box-sizing: border-box;
+            transition: transform 0.3s ease;
         }
 
         .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 30px rgba(0, 122, 204, 0.15);
+        }
+
+        .card:hover a {
             transform: scale(1.05);
-            box-shadow: 0 6px 12px var(--shadow-color);
+        }
+
+        /* Glowing effect */
+        .card::after {
+            content: '';
+            position: absolute;
+            inset: -1px;
+            background: linear-gradient(45deg, var(--accent-color), transparent);
+            z-index: 0;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .card:hover::after {
+            opacity: 0.3;
         }
 
         /* Responsive design */
-        @media (max-width: 600px) {
+        @media (max-width: 768px) {
+            header {
+                padding: 3rem 1rem;
+            }
+
+            header h1 {
+                font-size: 2.5rem;
+            }
+
             .container {
-                gap: 20px;
-                padding: 20px;
-            }
-            .card {
-                width: 100%;
-                height: calc(var(--card-width) * var(--card-aspect-ratio));
+                padding: 1rem;
+                gap: 1.5rem;
             }
         }
 
-        @media (min-width: 601px) and (max-width: 900px) {
-            .container {
-                gap: 25px;
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 2rem;
             }
-            .card {
-                width: calc(50% - 25px);
-                height: calc((50vw - 45px) * var(--card-aspect-ratio));
+
+            .card a {
+                font-size: 1.5rem;
+                padding: 1.5rem;
             }
         }
 
-        @media (min-width: 901px) and (max-width: 1200px) {
-            .card {
-                width: calc(33.33% - 30px);
-                height: calc((33.33vw - 50px) * var(--card-aspect-ratio));
-            }
-        }
-
-        @media (min-width: 1201px) {
-            .card {
-                width: var(--card-width);
-                height: var(--card-height);
-            }
-        }
-
+        /* Animation */
         @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
+
+        .card {
+            animation: fadeIn 0.6s ease-out forwards;
+            opacity: 0;
+        }
+
+        .card:nth-child(1) { animation-delay: 0.1s; }
+        .card:nth-child(2) { animation-delay: 0.2s; }
+        .card:nth-child(3) { animation-delay: 0.3s; }
+        .card:nth-child(4) { animation-delay: 0.4s; }
+        .card:nth-child(5) { animation-delay: 0.5s; }
     </style>
     <!-- Preload critical images -->
     <link rel="preload" as="image" href="images/book.jpg">
@@ -142,8 +211,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Readmuch's Blog</h1>
-        <p>Exploring Books, Life, Tech, and Education</p>
+        <h1>Readmuch's Blog</h1>
+        <p>Exploring the intersection of knowledge and creativity</p>
     </header>
     <div class="container">
         <div class="card">
@@ -163,7 +232,6 @@
         </div>
     </div>
     <script>
-        // Optimize image loading
         document.addEventListener('DOMContentLoaded', () => {
             const cards = document.querySelectorAll('.card a');
             const observer = new IntersectionObserver((entries) => {
