--- a/life.html
+++ b/life.html
@@ -4,43 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Category - Life</title>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         /* Base styles */
         :root {
-            --primary-color: #4CAF50;
-            --text-color: #333;
-            --bg-color: #f9f9f9;
-            --container-bg: #fff;
+            --bg-color: #1e1e1e;
+            --card-bg: #252526;
+            --text-color: #ffffff;
+            --accent-color: #007acc;
+            --border-color: rgba(255, 255, 255, 0.1);
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            color: var(--text-color);
+            font-family: 'Space Grotesk', sans-serif;
             background-color: var(--bg-color);
+            color: var(--text-color);
+            line-height: 1.6;
+            min-height: 100vh;
+            position: relative;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: 
+                radial-gradient(circle at 20% 20%, rgba(0, 122, 204, 0.05) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(0, 122, 204, 0.05) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 0;
         }
 
         header {
-            background: var(--primary-color);
-            color: #fff;
-            padding: 1rem 0;
+            background: linear-gradient(to bottom, rgba(37, 37, 38, 0.8), transparent);
+            color: var(--text-color);
+            padding: 2rem 0;
             text-align: center;
+            position: relative;
+            z-index: 1;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin-bottom: 1rem;
+            background: linear-gradient(45deg, var(--accent-color), #4ec9b0);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        header a {
+            color: var(--text-color);
+            text-decoration: none;
+            opacity: 0.8;
+            transition: opacity 0.3s ease;
+        }
+
+        header a:hover {
+            opacity: 1;
         }
 
         .container {
             max-width: 800px;
             margin: 2rem auto;
-            padding: 1rem;
-            background: var(--container-bg);
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 2rem;
+            background: var(--card-bg);
+            border-radius: 12px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            position: relative;
+            z-index: 1;
+            border: 1px solid var(--border-color);
         }
 
         h2 {
-            border-bottom: 2px solid var(--primary-color);
+            border-bottom: 2px solid var(--accent-color);
             padding-bottom: 0.5rem;
+            margin-bottom: 1.5rem;
+            font-size: 1.8rem;
         }
 
         ul {
@@ -50,44 +99,82 @@
 
         ul li {
             margin: 1rem 0;
+            padding: 0.5rem;
+            border-radius: 6px;
+            transition: background-color 0.3s ease;
+        }
+
+        ul li:hover {
+            background-color: rgba(0, 122, 204, 0.1);
         }
 
         ul li a {
             text-decoration: none;
-            color: var(--primary-color);
-            font-weight: bold;
+            color: var(--text-color);
+            font-weight: 500;
+            display: block;
             transition: color 0.3s ease;
         }
 
         ul li a:hover {
-            text-decoration: underline;
+            color: var(--accent-color);
         }
 
         .pagination {
             text-align: center;
-            margin-top: 1rem;
+            margin-top: 2rem;
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
         }
 
         .pagination button {
-            padding: 0.5rem 1rem;
-            margin: 0 0.5rem;
-            border: none;
-            background: var(--primary-color);
-            color: white;
+            padding: 0.8rem 1.5rem;
+            border: 1px solid var(--border-color);
+            background: var(--card-bg);
+            color: var(--text-color);
             cursor: pointer;
-            transition: background-color 0.3s ease;
+            transition: all 0.3s ease;
+            border-radius: 6px;
+            font-family: 'Space Grotesk', sans-serif;
+            font-weight: 500;
+        }
+
+        .pagination button:hover:not(:disabled) {
+            background: var(--accent-color);
+            border-color: var(--accent-color);
         }
 
         .pagination button:disabled {
-            background: #ccc;
+            opacity: 0.5;
             cursor: not-allowed;
+        }
+
+        /* Animation */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .container {
+            animation: fadeIn 0.6s ease-out forwards;
         }
 
         /* Responsive design */
         @media (max-width: 768px) {
             .container {
                 margin: 1rem;
-                padding: 0.5rem;
+                padding: 1.5rem;
+            }
+
+            header h1 {
+                font-size: 2rem;
             }
         }
     </style>
@@ -95,7 +182,7 @@
 <body>
     <header>
         <h1>Life Category</h1>
-        <a href="/index.html"><i class="fas fa-home"></i>Back to Home</a>
+        <a href="/index.html">← Back to Home</a>
     </header>
     <div class="container">
         <h2>Life List</h2>
@@ -111,14 +198,11 @@
         // Constants
         const POSTS_PER_PAGE = 10;
         const posts = [
-            { title: "토마토 계란 볶음", link: "/Life/EasyTastyHealthyRecipes.html" },
-            { title: "시원한 무국", link: "/Life/mookook.html" },
-            { title: "멸치볶음", link: "/Life/myeolchi.html" },
-            { title: "카레", link: "/Life/care.html" },
-            { title: "순두부국", link: "/Life/soondooboo.html" },
-            { title: "시금치나물", link: "/Life/sigmchi.html" },
-            { title: "숙주나물", link: "/Life/sukjoo.html" },
-            { title: "미역국", link: "/Life/miyuk.html" }
+            { title: "삶의 의미 - 빅터 프랭클", link: "/Life/meaningoflife.html" },
+            { title: "행복의 조건 - 마틴 셀리그만", link: "/Life/happiness.html" },
+            { title: "인간관계의 기술 - 데일 카네기", link: "/Life/relationships.html" },
+            { title: "삶의 균형 - 아리안나 허핑턴", link: "/Life/balance.html" },
+            { title: "자기계발의 기술 - 스티븐 코비", link: "/Life/selfimprovement.html" }
         ];
 
         // State management
