--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Readmuch's Blog - 지식과 창의성의 교차점을 탐구하는 블로그">
+    <meta name="description" content="Readmuch's Blog - Exploring the intersection of knowledge and creativity">
     <meta name="keywords" content="블로그, 독서, 교육, 기술, 삶, 마음노트">
     <meta name="theme-color" content="#1e1e1e">
     <meta name="color-scheme" content="dark">
