--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Readmuch's Blog - Exploring the intersection of knowledge and creativity">
-    <meta name="keywords" content="블로그, 독서, 교육, 기술, 삶, 마음노트">
+    <meta name="keywords" content="Book, Education, Technology, Life, Mindnotes">
     <meta name="theme-color" content="#1e1e1e">
     <meta name="color-scheme" content="dark">
     <title>Readmuch's Blog</title>
