--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Readmuch's Blog - Exploring the intersection of knowledge and creativity!">
+    <meta name="description" content="Readmuch's Blog - Exploring the intersection of knowledge and creativity">
     <meta name="keywords" content="Book, Education, Technology, Life, Mindnotes">
     <meta name="theme-color" content="#1e1e1e">
     <meta name="color-scheme" content="dark">
@@ -250,7 +250,7 @@
 <body>
     <header>
         <h1>Readmuch's Blog</h1>
-        <p>지식과 창의성의 교차점을 탐구하는 블로그</p>
+        <p>Exploring the intersection of knowledge and creativity</p>
     </header>
     <main class="container" role="main">
         <article class="card">
