--- a/education.html
+++ b/education.html
@@ -200,11 +200,10 @@
         // Constants
         const POSTS_PER_PAGE = 10;
         const posts = [
-            { title: "교육의 미래 - 켄 로빈슨", link: "/Education/futureofeducation.html" },
-            { title: "학습의 본질 - 피터 브라운", link: "/Education/learning.html" },
-            { title: "창의적 사고 - 에드워드 드 보노", link: "/Education/creativethinking.html" },
-            { title: "미래 교육 트렌드 - 토니 와그너", link: "/Education/educationtrends.html" },
-            { title: "학습 방법론 - 바바라 오클리", link: "/Education/learningmethods.html" }
+            { title: "html file 내에서 MD 문서 작성하기", link: "/Education/markdowninhtml.html" },
+            { title: "markdown 파일을 html 문서내에서 패치하기", link: "/Education/MDfetchinhtml.html" },
+            { title: "가무한과 실무한", link: "/Education/infinity.html" },
+            { title: "복권에 두번 당첨될 확률", link: "/Education/lottery.html" }
         ];
 
         // State management
