--- a/life.html
+++ b/life.html
@@ -198,13 +198,16 @@
         // Constants
         const POSTS_PER_PAGE = 10;
         const posts = [
-            { title: "삶의 의미 - 빅터 프랭클", link: "/Life/meaningoflife.html" },
-            { title: "행복의 조건 - 마틴 셀리그만", link: "/Life/happiness.html" },
-            { title: "인간관계의 기술 - 데일 카네기", link: "/Life/relationships.html" },
-            { title: "삶의 균형 - 아리안나 허핑턴", link: "/Life/balance.html" },
-            { title: "자기계발의 기술 - 스티븐 코비", link: "/Life/selfimprovement.html" }
+            { title: "토마토 계란 볶음", link: "/Life/EasyTastyHealthyRecipes.html" },
+            { title: "시원한 무국", link: "/Life/mookook.html" },
+            { title: "멸치볶음", link: "/Life/myeolchi.html" },
+            { title: "카레", link: "/Life/care.html" },
+            { title: "순두부국", link: "/Life/soondooboo.html" },
+            { title: "시금치나물", link: "/Life/sigmchi.html" },
+            { title: "숙주나물", link: "/Life/sukjoo.html" },
+            { title: "미역국", link: "/Life/miyuk.html" }
         ];
-
+        
         // State management
         let currentPage = 1;
 
