--- a/mindnotes.html
+++ b/mindnotes.html
@@ -198,11 +198,9 @@
         // Constants
         const POSTS_PER_PAGE = 10;
         const posts = [
-            { title: "생각의 기술 - 에드워드 드 보노", link: "/MindNotes/thinking.html" },
-            { title: "마음의 평화 - 틱낫한", link: "/MindNotes/peace.html" },
-            { title: "명상의 힘 - 존 카밧진", link: "/MindNotes/meditation.html" },
-            { title: "마음챙김 - 마크 윌리엄스", link: "/MindNotes/mindfulness.html" },
-            { title: "자기성찰 - 마르쿠스 아우렐리우스", link: "/MindNotes/reflection.html" }
+            { title: "독서모임", link: "/MindNotes/bookclub.html" },
+            { title: "직시", link: "/MindNotes/직시.html" },
+            { title: "책이 좋은 이유", link: "/MindNotes/책이좋은점.html" }
         ];
 
         // State management
