--- a/tech.html
+++ b/tech.html
@@ -198,12 +198,12 @@
         // Constants
         const POSTS_PER_PAGE = 10;
         const posts = [
-            { title: "인공지능의 미래 - 케빈 켈리", link: "/Tech/ai.html" },
-            { title: "블록체인 혁명 - 돈 탭스콧", link: "/Tech/blockchain.html" },
-            { title: "클라우드 컴퓨팅 - 마크 베니오프", link: "/Tech/cloud.html" },
-            { title: "사이버 보안 - 브루스 슈나이어", link: "/Tech/security.html" },
-            { title: "빅데이터 분석 - 빅터 마이어 쇤베르거", link: "/Tech/bigdata.html" }
+            { title: "허깅페이스를 활용한 이미지 생성", link: "/Tech/imagegernertion.html" },
+            { title: "PMP등 커리어 방향", link: "/Tech/career.html" },
+            { title: "금융 산업에서의 AI를 활용한 고객 행태 분석 및 마케팅 방법론", link: "/Tech/AIinFinance.html" },
+            { title: "예측 모델링 - 금융 고객 행동 예측의 시작", link: "/Tech/prediction.html" }
         ];
+
 
         // State management
         let currentPage = 1;
