--- a/life.html
+++ b/life.html
@@ -35,13 +35,13 @@
 </head>
 <body>
     <header>
-        <h1>Book Category</h1>
+        <h1>Lifestyle Category</h1>
         <a href="index.html" aria-label="Back to Home">← Back to Home</a>
     </header>
     <main class="container" role="main">
-        <h2>Book List</h2>
+        <h2>Lifestyle List</h2>
         <ul id="postList" role="list">
-            <!-- Book items will be injected here dynamically -->
+            <!-- Lifestyle items will be injected here dynamically -->
         </ul>
         <nav class="pagination" role="navigation" aria-label="Pagination">
             <button id="prevBtn" disabled aria-label="Previous page">Previous</button>
