--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
             </a>
         </article>
         <article class="card">
-            <a href="life.html" aria-label="Life Category">
-                <img src="images/life.jpg" alt="Life Category - Personal experiences and life lessons" loading="lazy" width="300" height="220" decoding="async">
-                <span>Life</span>
+            <a href="life.html" aria-label="Lifestyle Category">
+                <img src="images/life.jpg" alt="Lifestyle Category - Personal experiences and life lessons" loading="lazy" width="300" height="220" decoding="async">
+                <span>Lifestyle</span>
             </a>
         </article>
         <article class="card">
-            <a href="tech.html" aria-label="Tech Category">
-                <img src="images/tech.jpg" alt="Tech Category - Technology trends and innovations" loading="lazy" width="300" height="220" decoding="async">
-                <span>Tech</span>
+            <a href="tech.html" aria-label="Technology Category">
+s                <img src="images/tech.jpg" alt="Technology Category - Technology trends and innovations" loading="lazy" width="300" height="220" decoding="async">
+                <span>Technology</span>
             </a>
         </article>
         <article class="card">
