--- a/education.html
+++ b/education.html
@@ -55,11 +55,10 @@
         // Constants
         const POSTS_PER_PAGE = 10;
         const posts = [
-            { title: "교육의 미래 - 켄 로빈슨", link: "Education/futureofeducation.html" },
-            { title: "학습의 본질 - 피터 브라운", link: "Education/learning.html" },
-            { title: "교수법의 혁신 - 에릭 마주르", link: "Education/teaching.html" },
-            { title: "평가의 새로운 패러다임 - 딜런 윌리엄", link: "Education/assessment.html" },
-            { title: "디지털 시대의 교육 - 마크 프렌스키", link: "Education/digital.html" }
+            { title: "html file 내에서 MD 문서 작성하기", link: "/Education/markdowninhtml.html" },
+            { title: "markdown 파일을 html 문서내에서 패치하기", link: "/Education/MDfetchinhtml.html" },
+            { title: "가무한과 실무한", link: "/Education/infinity.html" },
+            { title: "복권에 두번 당첨될 확률", link: "/Education/lottery.html" }
         ];
 
         // State management
