--- a/mindnotes.html
+++ b/mindnotes.html
@@ -55,11 +55,9 @@
         // Constants
         const POSTS_PER_PAGE = 10;
         const posts = [
-            { title: "생각의 힘 - 마커스 아우렐리우스", link: "MindNotes/thinking.html" },
-            { title: "마음의 평화 - 에픽테토스", link: "MindNotes/peace.html" },
-            { title: "자기 성찰 - 소크라테스", link: "MindNotes/reflection.html" },
-            { title: "지혜의 길 - 아리스토텔레스", link: "MindNotes/wisdom.html" },
-            { title: "마음의 자유 - 에픽테토스", link: "MindNotes/freedom.html" }
+            { title: "독서모임", link: "/MindNotes/bookclub.html" },
+            { title: "직시", link: "/MindNotes/직시.html" },
+            { title: "책이 좋은 이유", link: "/MindNotes/책이좋은점.html" }
         ];
 
         // State management
